[gd_scene load_steps=8 format=3 uid="uid://crrov5yl5f6oc"]

[ext_resource type="Texture2D" uid="uid://brouchovemovb" path="res://assets/weapons/tile_projectile.png" id="1_c8fcr"]
[ext_resource type="Script" uid="uid://dcyhotunstho6" path="res://scripts/projectile.gd" id="2_q3m7n"]

[sub_resource type="Animation" id="Animation_q3m7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c8fcr"]
resource_name = "appear"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_softn"]
resource_name = "remove"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6q2a6"]
_data = {
&"RESET": SubResource("Animation_q3m7n"),
&"appear": SubResource("Animation_c8fcr"),
&"remove": SubResource("Animation_softn")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q3m7n"]
radius = 2.0
height = 6.0

[node name="Projectile" type="Sprite2D"]
visibility_layer = 5
z_index = 2
texture_filter = 1
texture = ExtResource("1_c8fcr")
script = ExtResource("2_q3m7n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6q2a6")
}
autoplay = "appear"
speed_scale = 2.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-2, 0)
target_position = Vector2(5, 0)
hit_from_inside = true

[node name="DistanceTimeout" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
visibility_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q3m7n")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="DistanceTimeout" to="." method="_on_distance_timeout_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
